.k8s/manifests/project-m-azdo-worker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-m-azdo-worker
  namespace: project-m
  labels:
    app: project-m-azdo-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-m-azdo-worker
  template:
    metadata:
      labels:
        app: project-m-azdo-worker
    spec:
      containers:
        - name: project-m-azdo-worker
          image: docker.io/project-m/azdo-worker:1.0.8
          imagePullPolicy: Always
