.k8s/manifests/pyzdo-azdo-worker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pyzdo-azdo-worker
  namespace: pyzdo
  labels:
    app: pyzdo-azdo-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pyzdo-azdo-worker
  template:
    metadata:
      labels:
        app: pyzdo-azdo-worker
    spec:
      containers:
        - name: pyzdo-azdo-worker
          image: docker.io/pyzdo/azdo-worker:1.0.8
          imagePullPolicy: Always
