.k8s/manifests/project-m-db.deprecated.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-m-db
  namespace: project-m
  labels:
    app: project-m-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-m-db
  template:
    metadata:
      labels:
        app: project-m-db
    spec:
      containers:
        - name: project-m-db
          image: docker.io/project-m/db:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8091
            - containerPort: 8092
            - containerPort: 8093
            - containerPort: 8094
            - containerPort: 8095
            - containerPort: 8096
            - containerPort: 8097
            - containerPort: 9123
            - containerPort: 11207
            - containerPort: 11210
            - containerPort: 11280
            - containerPort: 18091
            - containerPort: 18092
            - containerPort: 18093
            - containerPort: 18094
            - containerPort: 18095
            - containerPort: 18096
            - containerPort: 18097
---
apiVersion: v1
kind: Service
metadata:
  name: project-m-db
  namespace: project-m
spec:
  selector:
    app: project-m-db
  type: LoadBalancer
  ports:
    - name: port-8091
      protocol: TCP
      port: 8091
      targetPort: 8091
    - name: port-8092
      protocol: TCP
      port: 8092
      targetPort: 8092
    - name: port-8093
      protocol: TCP
      port: 8093
      targetPort: 8093
    - name: port-8094
      protocol: TCP
      port: 8094
      targetPort: 8094
    - name: port-8095
      protocol: TCP
      port: 8095
      targetPort: 8095
    - name: port-8096
      protocol: TCP
      port: 8096
      targetPort: 8096
    - name: port-8097
      protocol: TCP
      port: 8097
      targetPort: 8097
    - name: port-9123
      protocol: TCP
      port: 9123
      targetPort: 9123
    - name: port-11207
      protocol: TCP
      port: 11207
      targetPort: 11207
    - name: port-11210
      protocol: TCP
      port: 11210
      targetPort: 11210
    - name: port-11280
      protocol: TCP
      port: 11280
      targetPort: 11280
    - name: port-18091
      protocol: TCP
      port: 18091
      targetPort: 18091
    - name: port-18092
      protocol: TCP
      port: 18092
      targetPort: 18092
    - name: port-18093
      protocol: TCP
      port: 18093
      targetPort: 18093
    - name: port-18094
      protocol: TCP
      port: 18094
      targetPort: 18094
    - name: port-18095
      protocol: TCP
      port: 18095
      targetPort: 18095
    - name: port-18096
      protocol: TCP
      port: 18096
      targetPort: 18096
    - name: port-18097
      protocol: TCP
      port: 18097
      targetPort: 18097
