.k8s/manifests/pyzdo-cb-api.deprecated.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pyzdo-cb-api
  namespace: pyzdo
  labels:
    app: pyzdo-cb-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pyzdo-cb-api
  template:
    metadata:
      labels:
        app: pyzdo-cb-api
    spec:
      containers:
        - name: pyzdo-cb-api
          image: docker.io/pyzdo/cb-api:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8001
---

apiVersion: v1
kind: Service
metadata:
  name: pyzdo-cb-api
  namespace: pyzdo
spec:
  selector:
    app: pyzdo-cb-api
  type: ClusterIP
  ports:
    - name: port-8003
      protocol: TCP
      port: 8003
      targetPort: 8001

---

apiVersion: v1
kind: Service
metadata:
  name: ext-pyzdo-cb-api
  namespace: pyzdo
spec:
  selector:
    app: pyzdo-cb-api
  type: LoadBalancer
  ports:
    - name: port-8005
      protocol: TCP
      port: 8005
      targetPort: 8001
---
