.k8s/manifests/project-m-kafka-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-m-kafka-api
  namespace: project-m
  labels:
    app: project-m-kafka-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-m-kafka-api
  template:
    metadata:
      labels:
        app: project-m-kafka-api
    spec:
      containers:
        - name: project-m-kafka-api
          image: docker.io/project-m/kafka-api:1.0.8
          imagePullPolicy: Always
          ports:
            - containerPort: 8002
---

apiVersion: v1
kind: Service
metadata:
  name: project-m-kafka-api
  namespace: project-m
spec:
  selector:
    app: project-m-kafka-api
  type: ClusterIP
  ports:
    - name: port-8004
      protocol: TCP
      port: 8004
      targetPort: 8002

---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ir-project-m-kafka-api
  namespace: project-m
spec:
  entryPoints:
    - web
  routes:
  - match: "Host(`app.projectmetrics-devtest.privatelink.northeurope.azmk8s.io`) && PathPrefix(`/{path:(?i:app/kafka-api/v1)}`)"
    kind: Rule
    services:
    - name: project-m-kafka-api
      port: 8004
      namespace: project-m
    middlewares:
    - name: internal-project-m-kafka-api-stripprefix

---

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: internal-project-m-kafka-api-stripprefix
  namespace: project-m
spec:
  stripPrefixRegex:
    regex:
      - /(?i:app/kafka-api/v1)
