.k8s/manifests/project-m-ui.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-m-ui
  namespace: project-m
  labels:
    app: project-m-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-m-ui
  template:
    metadata:
      labels:
        app: project-m-ui
    spec:
      containers:
        - name: project-m-ui
          image: docker.io/project-m/ui:1.0.10
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
---

apiVersion: v1
kind: Service
metadata:
  name: project-m-ui-svc
  namespace: project-m
spec:
  selector:
    app: project-m-ui
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081

---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ir-project-m-ui
  namespace: project-m
spec:
  entryPoints:
    - web
  routes:
  - match: "Host(`ui.projectmetrics-devtest.privatelink.northeurope.azmk8s.io`)"
    kind: Rule
    services:
    - name: project-m-ui-svc
      port: 80
      namespace: project-m
